[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
default-run = "2024_04_01"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "2024_01_01"
path = "src/2024/01/01/main.rs"

[[bin]]
name = "2024_01_02"
path = "src/2024/01/02/main.rs"

[[bin]]
name = "2024_02_01"
path = "src/2024/02/01/main.rs"


[[bin]]
name = "2024_03_01"
path = "src/2024/03/01/main.rs"

[[bin]]
name = "2024_03_02"
path = "src/2024/03/02/main.rs"

[[bin]]
name = "2024_04_01"
path = "src/2024/04/01/main.rs"
