[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
default-run = "2024_07_02"

[dependencies]
multimap = "0.10.0"
regex = "1.11.1"

[[bin]]
name = "2024_01_01"
path = "src/2024/01/01/main.rs"

[[bin]]
name = "2024_01_02"
path = "src/2024/01/02/main.rs"

[[bin]]
name = "2024_02_01"
path = "src/2024/02/01/main.rs"


[[bin]]
name = "2024_03_01"
path = "src/2024/03/01/main.rs"

[[bin]]
name = "2024_03_02"
path = "src/2024/03/02/main.rs"

[[bin]]
name = "2024_04_01"
path = "src/2024/04/01/main.rs"

[[bin]]
name = "2024_04_02"
path = "src/2024/04/02/main.rs"

[[bin]]
name = "2024_05_01"
path = "src/2024/05/01/main.rs"

[[bin]]
name = "2024_05_02"
path = "src/2024/05/02/main.rs"

[[bin]]
name = "2024_06_01"
path = "src/2024/06/01/main.rs"

[[bin]]
name = "2024_07_01"
path = "src/2024/07/01/main.rs"

[[bin]]
name = "2024_07_02"
path = "src/2024/07/02/main.rs"
